# virtual-dom

./: .gitignore  Main.hs  README.org  default.nix  shell.nix  virtual-dom.cabal
src/: VirtualDom.hs
src/Data/: Immutable.hs
src/VirtualDom/: HTML.hs  Prim.hs
src/VirtualDom/HTML/: Attributes.hs
