name: virtual-dom
version: 0.1
build-type: Simple
cabal-version: >= 1.18
license: BSD3
license-file: LICENSE

library
  build-depends:
    base >= 4 && < 5,
    ghcjs-base,
    ghcjs-dom,
    lens,
    mtl,
    transformers
  default-language: Haskell2010
  hs-source-dirs: src
  js-sources:
    vendor/change-event.js
    vendor/dom-delegator.js
    vendor/ev-hook.js
    vendor/h.js
    vendor/immutable.min.js
    vendor/vdom.js
    vendor/virtualdom.js
    vendor/vnode.js
    vendor/vtext.js
    vendor/focus-hook.js
  exposed-modules:
    Data.Immutable
    VirtualDom
    VirtualDom.HTML
    VirtualDom.HTML.Attributes
    VirtualDom.Prim

executable tests
  build-depends: base >= 4 && < 5, virtual-dom
  main-is: Main.hs